# server/user.router.js
@@ -1,9 +1,57 @@
 const express = require('express');
 const router = express.Router();
 const User = require("./user.model.js");
+const Item = require("./item.model.js");
+
+router.param("userId", (req, res, next, userId) => {
+    User.findById(userId, (err, user) => {
+        if(err) return handleError(err, res);
+        if(!user) return handleError("user not found", res);
+
+        req.user = user;
+        next();
+    });
+});
+
+router.param("itemId", (req, res, next, itemId) => {
+    Item.findById(itemId, (err, item) => {
+        if(err) return handleError(err, res);
+        if(!item) return handleError("item not found", res);
+
+        req.item = item;
+        next();
+    });
+});
+
+router.get("/:userId", authMiddleware, (req,res) => {
+    res.send(req.user);
+});
+
+/* add an item to a cart */
+router.put("/:userId/cart/:itemId", (req, res) => {
+    req.user.cart.push(req.item._id.toString());
+    req.user.save((err) => {
+        if(err) return handleError(err, res);
+
+        res.send(req.user);
+    });
+});
+
+/* remove  an item to a cart */
+router.delete("/:userId/cart/:itemId", (req, res) => {
+    const index = req.user.cart.findIndex(itemId => itemId === req.item._id.toString());
+    req.user.cart.splice(index, 1);
+
+    req.user.save((err) => {
+        if(err) return handleError(err, res);
+
+        res.send(req.user);
+    });
+});
+
 
 /* Gets all users */
-router.get("/api/users", (req,res) => {
+router.get("/", (req,res) => {
     User.find({}, (err, docs) => {
         if(err) return handleError(err, res);
         res.status(200).json(docs);
@@ -11,7 +59,7 @@ router.get("/api/users", (req,res) => {
 });
 
 /* Deletes all users */
-router.delete("/api/users", (req, res) => {
+router.delete("/", (req, res) => {
    User.deleteMany({}, (err, docs) => {
        if(err) return handleError(err, res);
        console.log(docs);
